// Vitest Snapshot v1

exports[`Grid > Grid baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--grid"
>
  <t-row>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
    <t-col
      span="1"
    >
      <div>
        1
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      span="2"
    >
      <div>
        2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        2
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      span="3"
    >
      <div>
        3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        3
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      span="4"
    >
      <div>
        4
      </div>
    </t-col>
    <t-col
      span="4"
    >
      <div>
        4
      </div>
    </t-col>
    <t-col
      span="4"
    >
      <div>
        4
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      span="6"
    >
      <div>
        6
      </div>
    </t-col>
    <t-col
      span="6"
    >
      <div>
        6
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      span="12"
    >
      <div>
        12
      </div>
    </t-col>
  </t-row>
</div>
`;

exports[`Grid > Grid flexVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--grid"
>
  <t-row>
    <t-col
      flex="2"
    >
      <div>
        2 / 5
      </div>
    </t-col>
    <t-col
      flex="3"
    >
      <div>
        3 / 5
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      flex="100px"
    >
      <div>
        100px
      </div>
    </t-col>
    <t-col
      flex="auto"
    >
      <div>
        auto
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      flex="1 1 200px"
    >
      <div>
        1 1 200px
      </div>
    </t-col>
    <t-col
      flex="0 1 300px"
    >
      <div>
        0 1 300px
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      flex="none"
    >
      <div
        style="padding: 0px 16px;"
      >
        none
      </div>
    </t-col>
    <t-col
      flex="auto"
    >
      <div>
        auto with no-wrap
      </div>
    </t-col>
  </t-row>
</div>
`;

exports[`Grid > Grid gutterVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <span>
    水平 gutter 为固定值
  </span>
  <t-row
    gutter="16"
  >
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
  </t-row>
  <span>
    水平 gutter 为响应式
  </span>
  <t-row
    gutter="[object Object]"
  >
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
  </t-row>
  <span>
    水平和垂直 gutter 均为固定值
  </span>
  <t-row
    gutter="16,24"
  >
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
  </t-row>
  <span>
    水平 gutter 响应式，垂直 gutter固定值 
  </span>
  <t-row
    gutter="[object Object],24"
  >
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
  </t-row>
  <span>
    水平和垂直 gutter 均为响应式
  </span>
  <t-row
    gutter="[object Object],[object Object]"
  >
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
  </t-row>
</div>
`;

exports[`Grid > Grid halignVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <span>
    align left
  </span>
  <t-row
    justify="start"
  >
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
  </t-row>
  <span>
    align center
  </span>
  <t-row
    justify="center"
  >
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
  </t-row>
  <span>
    align right
  </span>
  <t-row
    justify="end"
  >
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
  </t-row>
  <span>
    space-between
  </span>
  <t-row
    justify="space-between"
  >
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
  </t-row>
  <span>
    space-around
  </span>
  <t-row
    justify="space-around"
  >
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
    <t-col
      span="2"
    >
      <div>
        col-2
      </div>
    </t-col>
  </t-row>
</div>
`;

exports[`Grid > Grid offsetVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-row>
    <t-col
      span="4"
    >
      <div>
        col-4
      </div>
    </t-col>
    <t-col
      offset="4"
      span="4"
    >
      <div>
        col-4 col-offset-4
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      offset="3"
      span="3"
    >
      <div>
        col-3 col-offset-3
      </div>
    </t-col>
    <t-col
      offset="3"
      span="3"
    >
      <div>
        col-3 col-offset-3
      </div>
    </t-col>
  </t-row>
  <t-row>
    <t-col
      offset="3"
      span="6"
    >
      <div>
        col-6 col-offset-3
      </div>
    </t-col>
  </t-row>
</div>
`;

exports[`Grid > Grid orderVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-row>
    <t-col
      order="4"
      span="3"
    >
      <div>
        1 col-3-order-4
      </div>
    </t-col>
    <t-col
      order="3"
      span="3"
    >
      <div>
        2 col-3-order-3
      </div>
    </t-col>
    <t-col
      order="2"
      span="3"
    >
      <div>
        3 col-3-order-2
      </div>
    </t-col>
    <t-col
      order="1"
      span="3"
    >
      <div>
        4 col-3-order-1
      </div>
    </t-col>
  </t-row>
</div>
`;

exports[`Grid > Grid responsiveVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <span>
    宽度响应式
  </span>
  <t-row>
    <t-col
      lg="8"
      md="6"
      sm="4"
      xl="10"
      xs="2"
    >
      <div>
        Col
      </div>
    </t-col>
    <t-col
      lg="4"
      md="6"
      sm="8"
      xl="2"
      xs="10"
    >
      <div>
        Col
      </div>
    </t-col>
  </t-row>
  <span>
    其他属性响应式（支持span，offset，order，pull，push）
  </span>
  <t-row>
    <t-col
      lg="[object Object]"
      md="[object Object]"
      sm="[object Object]"
      xl="[object Object]"
      xs="[object Object]"
    >
      <div>
        Col
      </div>
    </t-col>
  </t-row>
</div>
`;

exports[`Grid > Grid sortVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-row>
    <t-col
      push="3"
      span="9"
    >
      <div>
        col-9 col-pull-3
      </div>
    </t-col>
    <t-col
      pull="9"
      span="3"
    >
      <div>
        col-3 col-pull-9
      </div>
    </t-col>
  </t-row>
</div>
`;

exports[`Grid > Grid valignVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <p>
    align top
  </p>
  <t-row
    align="top"
    justify="center"
  >
    <t-col
      span="3"
    >
      <div
        style="height: 100px;"
      >
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div
        style="height: 100px;"
      >
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
  </t-row>
  <p>
    align middle
  </p>
  <t-row
    align="middle"
    justify="space-around"
  >
    <t-col
      span="3"
    >
      <div
        style="height: 100px;"
      >
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div
        style="height: 100px;"
      >
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
  </t-row>
  <p>
    align bottom
  </p>
  <t-row
    align="bottom"
    justify="space-between"
  >
    <t-col
      span="3"
    >
      <div
        style="height: 100px;"
      >
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div
        style="height: 100px;"
      >
        col-3
      </div>
    </t-col>
    <t-col
      span="3"
    >
      <div>
        col-3
      </div>
    </t-col>
  </t-row>
</div>
`;
